LIST OF CHANGES FOR NPG-QC PACKAGE

release 58.3.1
 - Updating Readme in npg_qc_viewer for changes in deploy procedure.
 - Fixing qXYield total for run and sample, now it calculates from actual values 
    in the table, does not recalculate from collection.
 - genotype check: reduce min_sample_call_rate parameter for genotype match from 95% to 75%, and
     min_common_snps from 21 to 20. This will allow (Fluidigm) qc genotypes with 20 calls to be
    identified as possible duplicates when using the standard set of 26 QC SNPS (W30467)

release 58.3
 - default autoqc result object creation - do not set tag index to undef to
   avoid this field being set when serializing to json with newer Moose

release 58.2
 - convert local path to nfs for linked tools when building fastq_summ

release 58.1
 - compile fastq_summ with samtools-1.2 and htslib-1.2.1
 - Removing global functions from manual_qc.js
 - Logic for preliminary outcomes for MQC
 - New undecided outcome for MQC
 - update scripts for genotype check data preparation
    - to allow specification of iRODS zone with an environment variable
    - perlcritic issues and version strings
 - gt_pack recognises version 02 headers in append mode
 - DBIx binding generation - keep column name case when generating accessors

release 58.0
 - skip running legacy gcbias if window_depth not available
 - compile fastq_summ executable during the npg_qc build, skip
     compilation if samtools is not on the path
 - C code clean-up to remove warnings in compilation
 - SeqQC daemon to set CATALYST_HOME relative to bin so that
     the production user does not have to have this definition
 - SeqQC build optionally fetches javascript dependencies
 - added scripts to handle generation of data for autoqc genotype checks

release 57.12
 - Removing MQC logic from templates and moving it to JS
 - Adding a controller to provide MQC status for a run using REST
 - Adding a role to provide functionality for 401 responses