@@ -5,11 +5,12 @@
     FOREACH key IN fnames.keys.sort;
       IF key != 'db_lookup';
         fname =  fnames.item("$key");
+        #action_plot and action_legend are defined in library_lanes
 -%]
 
-<img class="fastqcheck_plot" src="[%  c.uri_for_action(c.controller('Visuals').action_for('fastqcheck'), {path => "$fname", read => "$key", 'db_lookup' => "$use_db"}) | html %]"  alt="visualization for [% fname %]" />
+<img class="fastqcheck_plot" src="[%  c.uri_for_action(action_plot, {path => "$fname", read => "$key", 'db_lookup' => "$use_db"}) | html %]"  alt="visualization for [% fname %]" />
 [%- END -%]
 [%- END -%]
 
-<img class="fastqcheck_legend" src="[%  c.uri_for_action(c.controller('Visuals').action_for('fastqcheck_legend')) %]"  alt="legend for the fastqcheck file visualization" />
+<img class="fastqcheck_legend" src="[% legend_uri_for_action %]"  alt="legend for the fastqcheck file visualization" />
 [%- END -%]
