@@ -1,5 +1,8 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - Creating a cache in SeqStore model to reduce file system access. 
+    Improving query - using keys for tables.
+
 release 58.3.1
  - Updating Readme in npg_qc_viewer for changes in deploy procedure.
  - Fixing qXYield total for run and sample, now it calculates from actual values 
